Navigációs elem készítés

--- a/index.html
+++ b/index.html
@@ -8,7 +8,16 @@
 </head>
 <body>
 	<h1>Hello</h1>
-
+	<nav>
+		<ul>
+			<li>
+				<a href=""></a>
+			</li>
+			<li>
+				<a href=""></a>
+			</li>
+		</ul>
+	</nav>
 	<p>
 		Lorem ipsum dolor sit amet consectetur, adipisicing elit. Impedit voluptates esse tempora maiores quod excepturi at, maxime, mollitia eos suscipit facere consectetur corporis quae! Doloribus nihil voluptates accusamus inventore distinctio.
 	</p>
