Feltöltés a github szerverre

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 	<nav>
 		<ul>
 			<li>
-				<a href=""></a>
+				<a href="#">Termékek</a>
 			</li>
 			<li>
-				<a href=""></a>
+				<a href="#">Partnerek</a>
 			</li>
 		</ul>
 	</nav>
